<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/off_white"
    tools:context=".ui.note.AddEditNoteActivity">

    <TextView
        android:id="@+id/add_note_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/add_note"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/caveatbrush_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ic_add_edit_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/close_button"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input_layout"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColorHint="@color/black_2"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_selector_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_input_layout"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text">

            <AutoCompleteTextView
                android:id="@+id/voice_note_category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_note_category"
                android:padding="10dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:importantForAutofill="no"
                android:dropDownHeight="wrap_content"
                android:completionThreshold="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_input_layout"
        style="@style/Widget.App.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/content"
        android:textColorHint="@color/black_2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/category_selector_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_edit_note_bottom_nav">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_content_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minLines="4"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_edit_note_bottom_nav"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/save_note_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add_circle"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/save_note_button"
                app:tint="@color/light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/add_bullets"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/add_bullets"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save_note_button"
                android:src="@drawable/add_note_bullet"
                app:tint="@color/light_blue" />

            <ImageView
                android:id="@+id/add_attachment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/attach_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_bullets"
                android:src="@drawable/attach_image"
                app:tint="@color/light_blue" />

            <ImageView
                android:id="@+id/add_take_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/take_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_attachment"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/attach_photo"
                app:tint="@color/light_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>