<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/off_white"
    app:strokeWidth="1dp"
    app:strokeColor="@color/light_blue" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_badge_background"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_notes"
                    app:tint="@color/dark_blue"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text Note"
                    android:textColor="@color/dark_blue"
                    android:textSize="10sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_title"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:lineSpacingExtra="2dp" />

            <TextView
                android:id="@+id/note_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="bold"
                android:textColor="@color/light_blue"
                android:textSize="13sp"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/note_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_content_preview"
                android:textColor="@color/dark_blue"
                android:textSize="14sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:minLines="2"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="2dp"
                android:alpha="0.8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:background="@color/light_purple"
                android:alpha="0.3"/>

            <TextView
                android:id="@+id/note_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/timestamp"
                android:textColor="@color/light_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/pin_icon_imageview"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/note_pin"
            app:tint="@color/dark_blue"
            android:contentDescription="@string/pinned_note_indicator"
            android:visibility="gone" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
